force-app/main/default/objects/Apttus_Config2__AttributeGroupTranslation__c/Apttus_Config2__AttributeGroupTranslation__c.object-meta.xml
<CustomObject>
    <description>This object holds the translated values of attribute group object fields for all the languages</description>
    <label>Attribute Group Translation</label>
    <nameField>
        <label>Translation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attribute Group Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>