force-app/main/default/objects/Apttus_Config2__AttributeGroupTranslation__c/fields/Apttus_Config2__Language__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Language__c</fullName>
    <description>holds the language which the record belongs to</description>
    <inlineHelpText>holds the language which the record belongs to</inlineHelpText>
    <label>Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>