force-app/main/default/objects/Apttus_Config2__AttributeGroupTranslation__c/fields/Apttus_Config2__ProductAttributeGroupId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductAttributeGroupId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Looks up to Product Attribute Group</description>
    <inlineHelpText>Looks up to Product Attribute Group</inlineHelpText>
    <label>Product Attribute Group</label>
    <referenceTo>Apttus_Config2__ProductAttributeGroup__c</referenceTo>
    <relationshipName>Translation</relationshipName>
    <type>Lookup</type>
</CustomField>