force-app/main/default/objects/Apttus_Config2__AttributeGroupTranslation__c/listViews/Apttus_Config2__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Config2__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>